--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1353,7 +1353,7 @@ work Section style
 	}
 	
 .education-bg{
-	background-image:url(../images/test.png);
+	background-image:url(../images/web-design.png);
 	height:425px;}
 	
 .education-1, .education-2{
